# game_template

./: camera.cpp  entity.cpp  factory.cpp  game.cpp  game.hpp  group.cpp  image.cpp  includes.hpp  mesh.cpp  meson.build  model.cpp  render.hpp  renderable.hpp  shader.cpp  skybox.cpp  state.cpp  state.hpp  terrain.cpp  world.cpp  world.hpp
assimp/lib/: IrrXMLd.lib  assimp-vc140-mt.lib  assimp-vc141-mtd.lib  zlibstaticd.lib
assimp/lib/cmake/assimp-4.0/: assimp-config-version.cmake
res/: terrain.fs  terrain.vs
res/shaders/: skybox.fs  skybox.vs  terrain.fs  terrain.vs  textures.fs  textures.vs
